image and voice message store to cloudinary

--- a/server/.env.example
+++ b/server/.env.example
@@ -28,6 +28,11 @@ STRIPE_WEBHOOK_SECRET=whsec_your_webhook_secret
 # PAYPAL_CLIENT_ID=your_paypal_client_id
 # PAYPAL_CLIENT_SECRET=your_paypal_client_secret
 
+# Cloudinary Configuration (For media storage)
+CLOUDINARY_CLOUD_NAME=your_cloud_name
+CLOUDINARY_API_KEY=your_api_key
+CLOUDINARY_API_SECRET=your_api_secret
+
 # Frontend URL (for CORS and redirects)
 CLIENT_URL=http://localhost:5173
 
