--- a/server/package.json
+++ b/server/package.json
@@ -21,6 +21,7 @@
   "dependencies": {
     "axios": "^1.13.4",
     "bcryptjs": "^2.4.3",
+    "cloudinary": "^1.41.3",
     "cors": "^2.8.5",
     "dotenv": "^16.3.1",
     "express": "^4.18.2",
@@ -32,6 +33,7 @@
     "mongoose": "^8.0.3",
     "morgan": "^1.10.1",
     "multer": "^2.0.2",
+    "multer-storage-cloudinary": "^4.0.0",
     "socket.io": "^4.6.1",
     "stripe": "^14.11.0",
     "winston": "^3.19.0",
